# docs/swagger.yaml
@@ -2589,7 +2589,7 @@ paths:
       summary: Upload release
       tags:
       - Releases
-  /share/{code}/download:
+  /share/{code}:
     get:
       consumes:
       - application/json
@@ -2617,7 +2617,7 @@ paths:
             $ref: '#/definitions/domain.Response'
       summary: Download shared release
       tags:
-      - Sharing
+      - share(public)
   /shares:
     get:
       consumes:
@@ -2638,7 +2638,7 @@ paths:
       - BearerAuth: []
       summary: Get share list
       tags:
-      - Shares
+      - Shares(management)
   /shares/{id}:
     delete:
       consumes:
@@ -2665,7 +2665,7 @@ paths:
       - BearerAuth: []
       summary: Delete share
       tags:
-      - Shares
+      - Shares(management)
   /tenants:
     get:
       consumes:
